--- a/data/config.toml
+++ b/data/config.toml
@@ -3,6 +3,32 @@ stack_limit = 99
 max_loop_limit = 60
 tav_level_thresholds = [0, 50, 150, 300, 600]
 skill_level_thresholds = [0, 10, 20, 40, 80]
+default_schedule = [
+  "work",     # 0
+  "work",     # 1
+  "work",     # 2
+  "work",     # 3
+  "work",     # 4
+  "work",     # 5
+  "work",     # 6
+  "work",     # 7
+  "work",     # 8
+  "work",     # 9
+  "work",     # 10
+  "work",     # 11
+  "work",     # 12
+  "work",     # 13
+  "work",     # 14
+  "work",     # 15
+  "work",     # 16
+  "work",     # 17
+  "work",     # 18
+  "work",     # 19
+  "work",     # 20
+  "work",     # 21
+  "work",     # 22
+  "work"      # 23
+]
 
 [defaults.ability_scores]
 str = 10
@@ -76,6 +102,7 @@ add_requirements = []
 execute_requirements = [
   { op = "ability_min", ability = "str", value = 10 },
   { op = "custom", name = "logging_allowed" },
+  { op = "flag_present", flagId = "schedule_block_work" },
 ]
 
 [[skills]]
@@ -90,6 +117,7 @@ add_requirements = [
 ]
 execute_requirements = [
   { op = "item_required", itemId = "log", quantity = 2 },
+  { op = "flag_present", flagId = "schedule_block_work" },
 ]
 
 [[skills]]
@@ -108,7 +136,9 @@ description = "Focus to gain insight"
 priority = 5
 targets = ["null"]
 add_requirements = []
-execute_requirements = []
+execute_requirements = [
+  { op = "flag_present", flagId = "schedule_block_work" },
+]
 completion_effect = { tav_xp = 60 }
 
 [[skills]]
@@ -118,7 +148,10 @@ description = "Write records, requires experience"
 priority = 6
 targets = ["null"]
 add_requirements = []
-execute_requirements = [ { op = "tav_level_min", level = 2 } ]
+execute_requirements = [
+  { op = "tav_level_min", level = 2 },
+  { op = "flag_present", flagId = "schedule_block_work" },
+]
 
 [[skills]]
 id = "scribe_pro"
@@ -127,7 +160,10 @@ description = "Advanced scribing unlocked by logging skill level"
 priority = 7
 targets = ["null"]
 add_requirements = []
-execute_requirements = [ { op = "skill_level_min", skillId = "logging", level = 3 } ]
+execute_requirements = [
+  { op = "skill_level_min", skillId = "logging", level = 3 },
+  { op = "flag_present", flagId = "schedule_block_work" },
+]
 
 [[skills]]
 id = "self_train"
@@ -136,7 +172,10 @@ description = "Train yourself; requires own level >= 2"
 priority = 5
 targets = ["null"]
 add_requirements = []
-execute_requirements = [ { op = "skill_level_min", skillId = "self_train", level = 2 } ]
+execute_requirements = [
+  { op = "skill_level_min", skillId = "self_train", level = 2 },
+  { op = "flag_present", flagId = "schedule_block_work" },
+]
 completion_effect = { skill_xp = 10 }
 
 [[skills]]
@@ -146,7 +185,10 @@ description = "Senior scribe requiring tav level 2"
 priority = 7
 targets = ["null"]
 add_requirements = []
-execute_requirements = [ { op = "tav_level_min", level = 2 } ]
+execute_requirements = [
+  { op = "tav_level_min", level = 2 },
+  { op = "flag_present", flagId = "schedule_block_work" },
+]
 
 [[skills]]
 id = "survey"
@@ -160,6 +202,7 @@ execute_requirements = [
     { op = "flag_present", flagId = "scout_ready" },
     { op = "skill_level_min", skillId = "logging", level = 3 },
   ] },
+  { op = "flag_present", flagId = "schedule_block_work" },
 ]
 
 
