--- a/data/config.toml
+++ b/data/config.toml
@@ -4,6 +4,9 @@ max_loop_limit = 60
 tav_level_thresholds = [0, 50, 150, 300, 600]
 skill_level_thresholds = [0, 10, 20, 40, 80]
 default_schedule = [
+  # A more balanced day: start with work to satisfy tests relying on block 0
+  # 0-7 work (8 blocks), 8 bathtime, 9-16 work (8 blocks),
+  # 17-19 downtime (3), 20 bathtime (1), 21-23 bedtime (3)
   "work",     # 0
   "work",     # 1
   "work",     # 2
@@ -12,7 +15,7 @@ default_schedule = [
   "work",     # 5
   "work",     # 6
   "work",     # 7
-  "work",     # 8
+  "bathtime", # 8
   "work",     # 9
   "work",     # 10
   "work",     # 11
@@ -21,13 +24,13 @@ default_schedule = [
   "work",     # 14
   "work",     # 15
   "work",     # 16
-  "work",     # 17
-  "work",     # 18
-  "work",     # 19
-  "work",     # 20
-  "work",     # 21
-  "work",     # 22
-  "work"      # 23
+  "downtime", # 17
+  "downtime", # 18
+  "downtime", # 19
+  "bathtime", # 20
+  "bedtime",  # 21
+  "bedtime",  # 22
+  "bedtime"   # 23
 ]
 
 [defaults.ability_scores]
