--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-dist/
-
 # dev
 .yarn/
 !.yarn/releases
@@ -32,5 +30,9 @@ drizzle/
 
 # misc
 .DS_Store
+
+# build folders
 coverage/
 driizle/
+dist/
+
